add download method handler